src/objects/Object_diz_C__c.object
<CustomObject>
    <description>diz11</description>
    <fields>
        <fullName>AAAutoNumberField__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Test</description>
        <inlineHelpText>Help Texttgfyhjkl</inlineHelpText>
        <label>AutoNumberField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAutoNumberField__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Description</description>
        <inlineHelpText>Help Text12336</inlineHelpText>
        <label>AutoNumberField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>descr555vfbgnm</description>
        <inlineHelpText>helpdfghjk</inlineHelpText>
        <label>Account2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CRName</relationshipLabel>
        <relationshipName>CRName</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>descr</description>
        <inlineHelpText>helpg123132</inlineHelpText>
        <label>Account_org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Object_diz_C (Account_org)</relationshipLabel>
        <relationshipName>Object_diz_C1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoNumberField__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Description</description>
        <inlineHelpText>Help Textfghjkl</inlineHelpText>
        <label>AutoNumberField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MynewUrl__c</fullName>
        <label>MynewUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TestAutoNumber__c</fullName>
        <description>descript</description>
        <displayFormat>{0000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>help</inlineHelpText>
        <label>TestAutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>descr</description>
        <inlineHelpText>htlp</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.alst__c</field>
                <operation>lessOrEqual</operation>
                <value>25</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Object_diz_C</relationshipLabel>
        <relationshipName>Object_diz_C</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alast__c</fullName>
        <defaultValue>0</defaultValue>
        <externalId>true</externalId>
        <label>xlast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alst__c</fullName>
        <defaultValue>0</defaultValue>
        <externalId>true</externalId>
        <label>alst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>asdfdate__c</fullName>
        <label>asdfdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asfccccc__c</fullName>
        <description>asdf</description>
        <displayFormat>{000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>asdf</inlineHelpText>
        <label>asf</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>autonumber_fieldName__c</fullName>
        <label>autonumber_fieldLabel</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>diz_autoN__c</fullName>
        <description>asdf</description>
        <displayFormat>{000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>asdf</inlineHelpText>
        <label>diz_autoN</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_date4__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_date4__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_formula2__c</fullName>
        <description>test</description>
        <formula>2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_formula2__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_formula3__c</fullName>
        <formula>2</formula>
        <label>diz_formula3__c</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_percent__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_percent__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_phoneX__c</fullName>
        <description>test</description>
        <label>diz_phoneX__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_picklist3__c</fullName>
        <label>diz_picklist3__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist__c</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asdasd</fullName>
                    <default>true</default>
                    <label>asdasd</label>
                </value>
                <value>
                    <fullName>2343s</fullName>
                </value>
                <value>
                    <fullName>dsfds</fullName>
                </value>
                <value>
                    <fullName>fdf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_url__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_url__c</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dizzY_picklist__c</fullName>
        <description>test</description>
        <label>dizzY_picklist__c</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>anotherOne</fullName>
                </value>
                <value>
                    <fullName>gfdfg</fullName>
                </value>
                <value>
                    <fullName>gsdfg</fullName>
                </value>
                <value>
                    <fullName>wert</fullName>
                </value>
                <value>
                    <fullName>new</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fieldnameS__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>fieldlabelSsssss</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>fieldname__c</fullName>
        <description>dcvfbghnm</description>
        <displayFormat>{0000}</displayFormat>
        <label>fieldlabel</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>formulaCurrnecy__c</fullName>
        <formula>10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formulaCurrnecy</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fromula123__c</fullName>
        <formula>5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fromula123</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>m1yText__c</fullName>
        <description>hjkl</description>
        <label>m1yText</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>main__c</fullName>
        <label>main</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>abcv</fullName>
                </value>
                <value>
                    <fullName>one</fullName>
                    <default>true</default>
                    <label>one</label>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>myAutoNumber__c</fullName>
        <description>descr</description>
        <displayFormat>{0000}</displayFormat>
        <inlineHelpText>help</inlineHelpText>
        <label>myAutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>myCheckBox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>descr</description>
        <inlineHelpText>help</inlineHelpText>
        <label>myCheckBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>myCurrency__c</fullName>
        <description>descr</description>
        <inlineHelpText>help</inlineHelpText>
        <label>myCurrency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>myDateFromOrg__c</fullName>
        <label>myDateFromOrg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>myFormula__c</fullName>
        <description>descr</description>
        <formula>&quot;text123&quot;</formula>
        <inlineHelpText>help</inlineHelpText>
        <label>myFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myText__c</fullName>
        <description>dfghjkl</description>
        <label>myText</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numberFromOrg__c</fullName>
        <label>numberFromOrg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfasd__c</fullName>
        <label>sdfasd</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>anotherOne</fullName>
                </value>
                <value>
                    <fullName>gfdfg</fullName>
                </value>
                <value>
                    <fullName>gsdfg</fullName>
                </value>
                <value>
                    <fullName>wert</fullName>
                </value>
                <value>
                    <fullName>new</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testFieldCheckboxS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testFieldCheckboxS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testFieldCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testFieldCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testFormula1111__c</fullName>
        <description>test</description>
        <formula>2+2</formula>
        <inlineHelpText>test</inlineHelpText>
        <label>testFormula1111</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testpicklist__c</fullName>
        <label>testpicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>asdf1</fullName>
                    <default>true</default>
                    <label>asdf1</label>
                </value>
                <value>
                    <fullName>asdf2</fullName>
                </value>
                <value>
                    <fullName>asdf3</fullName>
                </value>
                <value>
                    <fullName>asdf4</fullName>
                </value>
                <value>
                    <fullName>asdf5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xlast__c</fullName>
        <defaultValue>0</defaultValue>
        <externalId>true</externalId>
        <label>xlast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xwst__c</fullName>
        <defaultValue>0</defaultValue>
        <externalId>true</externalId>
        <label>xlast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Object_diz_C</label>
    <nameField>
        <label>Object_diz_C</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object_diz_C</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>validation_diz_C</fullName>
        <active>true</active>
        <description>diz</description>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>error-message_test</errorMessage>
    </validationRules>
</CustomObject>